2010-01-21  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc: more restrictions on suggested file name.
	* FileCopy.cc: use suggested file name only if no such file exists.
	* GetJob.cc, FileCopy.cc: use O_EXCL when xfer:clobber is no.

2009-12-21  Alexander V. Lukyanov <lav@yars.free.net>

	* pgetJob.cc, pgetJob.h: add PrepareToDie method (fixes a core dump
	  on "kill all").
	* HttpDir.cc: don't use strlcpy.
	* Torrent.cc, Torrent.h: fix a warning on x86_64; when shutting down,
	  terminate immediately on a new signal.

2009-12-18  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc: use xrealloc.
	* misc.cc: (dir_file) use xstring::get_tmp (fixes sftp rename).
	* HttpDir.cc: add parser for lightttpd listing.

2009-11-17  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc, lftp_rl.c, lftp_rl.h: new setting cmd:stifle-rl-history.

2009-11-17  Robert Story <Robert.Story@cobham.com>

	* Resolver.cc: use VAL_GETADDRINFO_HAS_STATUS macro.

2009-10-30  Robert Story <Robert.Story@cobham.com>

	* Resolver.cc: validate "no such name" answers.

2009-10-26  Alexander V. Lukyanov <lav@yars.free.net>

	* Resolver.cc, Resolver.h: use default dnssec context; cosmetics.

2009-10-23  Robert Story <Robert.Story@cobham.com>

	* ResMgr.cc: check is_nil for numeric settings, prevents core dump
	  when accessing inexisting settings.
	* resource.cc, Resolver.cc, Resolver.h: add dnssec support.

2009-10-23  Alexander V. Lukyanov <lav@yars.free.net>

	* ResMgr.cc: use strtoll for signed numbers.

2009-10-16  Daniel Fazekas <fdsoft@gmail.com>

	* FileSetOutput.cc: fixed buffer size for human_readable.

2009-10-09  Alexander V. Lukyanov <lav@yars.free.net>

	* mgetJob.cc: better error messages; fixed exit code.
	* FileGlob.cc better error handling.
	* FileSet.cc, MirrorJob.cc: get rid of HAVE_LSTAT.
	* lftp_ssl.cc: include string.h

2009-09-23  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h: show tracker timer time left; don't connect